--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "zendframework/zendframework": "2.4.*",
+        "zendframework/zendframework": "2.4.5",
         "zendframework/zend-developer-tools": "dev-master",
         "bjyoungblood/bjy-profiler": "dev-master",
         "thadafinser/tha-configalyzer": "dev-master",
