--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "facebook/php-sdk-v4": "~5.0",
         "phpunit/phpunit": "4.8.*",
         "squizlabs/php_codesniffer": "2.3.*",
-        "phpmd/phpmd": "2.3.*"
+        "phpmd/phpmd": "2.3.*",
+        "sunra/php-simple-html-dom-parser": "v1.5.0"
     },
     "autoload": {
         "psr-0": {
